# basic-python-setup

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg
fast/: main.py  scripts.py
stoked/: math.py
tests/: test_kulpy.py  test_stoked.py
